# minipg

./: .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  minipg.py  pyproject.toml  setup.py  test_async.py  test_minipg.py
.github/workflows/: test.yml
minipg/: __init__.py  __main__.py  dialect.py  err.py  minipg.pxd  minipg.py  pgcore.py  test_minipg.py
misc/: pgproxy.py
